Made it run without capatalised input

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>boolean-uk-js-sorting-last-names</h1>
+        <h2>See the results in the console 😎</h2>
     </body>
 </html>
